# floss

./: ARTIFACTS.md  Cargo.toml  Readme.md
MOSAC/: .bazelrc  Dockerfile  shuffle_opv_4_offline.csv  shuffle_opv_4_online.csv
MOSAC/scripts/: setup-opmcc-bench.sh
artifacts/: collect_floss_bench_results.py  mirror  mirror_urls.txt  prereq-install.sh  resume_cluster.py  run_floss_bench.py  start_cluster.py  stop_cluster.py  system.config  teardown_cluster.py
benches/: floss_shuffle.rs  perm_network_shuffle.rs  simple_perm_network_shuffle.rs  sort_with_floss.rs  sort_with_perm_network.rs  sort_with_quicksort.rs  sort_with_simple_perm_network.rs  sort_with_sorting_network.rs
mp-spdz-0.4.2/Compiler/: allocator.py  floatingpoint.py  instructions_base.py  ml.py  types.py
mp-spdz-0.4.2/FHE/: Ciphertext.cpp  FFT.cpp  FHE_Keys.cpp  NTL-Subs.cpp  Ring_Element.cpp  Rq_Element.cpp
mp-spdz-0.4.2/Math/: Setup.cpp  Zp_Data.cpp  Zp_Data.h  gfp.h  gfp.hpp
mp-spdz-0.4.2/Networking/: Player.cpp  Player.h
mp-spdz-0.4.2/Processor/: OfflineMachine.hpp
mp-spdz-0.4.2/Protocols/: Rep4.h  Rep4.hpp  Rep4Input.hpp
mp-spdz-0.4.2/Tools/: random.cpp  random.h
opm/: Dockerfile  README.md  WORKSPACE  shuffle_opv_8_offline.csv  shuffle_opv_8_online.csv
plots/: gen_plot_data.py  main.tex  plot_pareto_shuffle.tex  plot_pareto_sort.tex  plot_shuffling.tex  plot_sorting.tex
plots/plot_data/: pareto_shuffle_floss.csv  pareto_shuffle_frontier.csv  pareto_shuffle_opmcc.csv  pareto_shuffle_permnet.csv  (+24 more)
scripts/: bench_opmcc.sh  setup-opmcc-bench.sh
src/: lib.rs  net.rs
(+55 files in other folders)
