[package]
name = "ark-mpc-2"
version = "0.1.0"
edition = "2024"
autobenches = false

[features]
# Compile benchmark helpers for `cargo bench` targets. Kept in default features so
# `cargo bench --bench <name>` works without extra flags (use `cargo build --no-default-features` to omit).
default = ["bench"]
bench = []

[dependencies]
ark-ff = "0.5.0"
ark-serialize = { version = "0.5.0", features = ["derive"] }
ark-ff-macros = "0.5.0"
ark-std = "0.5.0"
byteorder = "1"
digest = "0.10.7"
fxhash = "0.2.1"
itertools = "0.14.0"
log = "0.4.27"
rand = "0.9.2"
rayon = "1.10.0"
regex = "1"
sha2 = "0.10.9"
# Used by `src/bench` when built for `cargo bench` (dev-dependencies are not available to the lib then).
tempfile = "3.20.0"

[dev-dependencies]
ark-ff = "0.5.0"
ark-bls12-381 = "0.5.0"
rand_chacha = "0.9.0"

# Match `cargo test --release`: the default `bench` profile already inherits `release`
# (opt-level 3, etc.). This keeps the relationship explicit.
[profile.bench]
inherits = "release"

[[bench]]
name = "simple_perm_network_shuffle"
harness = false

[[bench]]
name = "perm_network_shuffle"
harness = false

[[bench]]
name = "floss_shuffle"
harness = false

[[bench]]
name = "sort_with_floss"
harness = false

[[bench]]
name = "sort_with_perm_network"
harness = false

[[bench]]
name = "sort_with_quicksort"
harness = false

[[bench]]
name = "sort_with_sorting_network"
harness = false

[[bench]]
name = "sort_with_simple_perm_network"
harness = false
